--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-config-google": "^0.5.0",
     "grunt-injector": "~0.6.1",
     "grunt-wiredep": "^3.0.1",
-    "http-server": "0.9.0"
+    "http-server": "0.9.0",
+    "grunt-http-server": ""
   }
 }
