--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "boards for retro meetings ",
   "main": "index.html",
   "scripts": {
-    "start": "http-server -a localhost -p 8000",
+    "start": "node index.js",
     "postinstall": "bower install"
   },
   "engines": {
@@ -22,12 +22,9 @@
   },
   "homepage": "https://github.com/Josephdias92/jBoards#readme",
   "dependencies": {
-    "body-parser": "~1.0.0",
     "bower": "^1.7.9",
     "express": "~4.2.0",
-    "grunt": "^1.0.1",
-    "mongoose": "~3.8.11",
-    "node-static": "^0.7.7"
+    "grunt": "^1.0.1"
   },
   "devDependencies": {
     "eslint": "^2.10.2",
