--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "angular-ui-router": "^0.3.0",
     "font-awesome": "^4.6.3",
     "angular-drag-and-drop-lists": "^1.4.0",
-    "angular-resource": "^1.5.5"
+    "angular-resource": "^1.5.5",
+    "angular-messages": "^1.5.6"
   },
   "overrides": {
     "font-awesome": {
