--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "font-awesome": "^4.6.3",
     "angular-drag-and-drop-lists": "^1.4.0",
     "angular-resource": "^1.5.5",
-    "angular-messages": "^1.5.6"
+    "angular-messages": "^1.5.6",
+    "angularfire": "^2.3.0"
   },
   "overrides": {
     "font-awesome": {
